Fix tox configuration

--- a/tox.ini
+++ b/tox.ini
@@ -16,15 +16,13 @@ commands =
 
 [testenv:lint]
 skipsdist = true
-deps =
-    -r{toxinidir}/requirements_dev.txt
+extras = dev    
 commands =
     /usr/bin/env make lint
 
 
 [testenv:docs]
 skipsdist = true
-deps =
-    -r{toxinidir}/requirements_dev.txt
+extras = dev
 commands =
     /usr/bin/env make docs
