Upgrade to latest DAI-Lab standards

--- a/tox.ini
+++ b/tox.ini
@@ -11,12 +11,12 @@ python =
 setenv =
     PYTHONPATH = {toxinidir}
 commands =
-    /usr/bin/env python setup.py test
+    python -m pytest --basetemp={envtmpdir}
 
 
 [testenv:lint]
 skipsdist = true
-extras = dev    
+extras = dev
 commands =
     /usr/bin/env make lint
 
