--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ python =
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
+extras = test
 commands =
     python -m pytest --basetemp={envtmpdir}
 
