--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
+            python setup.py install_egg_info
             pip install -e .[dev]
 
       - save_cache:
