fix dependency and pytest issues

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
     PYTHONPATH = {toxinidir}
 extras = test
 commands =
-    python -m pytest --basetemp={envtmpdir}
+    python -m pytest tests --basetemp={envtmpdir}
 
 
 [testenv:lint]
