--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,20 @@
-# Python CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-python/ for more details
-#
+### =============================================================
+### This configuration file is used by CircleCI build server
+### https://circleci.com/docs/config-sample
+### =============================================================
+
 version: 2
 jobs:
-  build:
-    docker:
-      - image: circleci/python:3.6.1
+  toxify:
+      docker:
+        - image: themattrix/tox
+      steps:
+        - checkout
+        - run: tox
 
-    working_directory: ~/repo
+workflows:
+  version: 2
 
-    steps:
-      - checkout
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "setup.py" }}
-
-      - run:
-          name: install dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            python setup.py install_egg_info
-            pip install -e .[dev]
-
-      - save_cache:
-          paths:
-            - ./venv
-          key: v1-dependencies-{{ checksum "setup.py" }}
-
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            tox
-
-      - store_artifacts:
-          path: test-reports
-          destination: test-reports
+  myproj:
+    jobs:
+      - toxify
