--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
-dist: trusty
+dist: bionic
 language: python
 python:
   - 3.6
-
-matrix:
-  include:
-    - python: 3.7
-      dist: xenial
-      sudo: required
+  - 3.7
 
 # Command to install dependencies
 install: pip install -U tox-travis codecov
