--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,20 @@
 [bumpversion]
-current_version = 0.1.0-dev
+current_version = 0.1.0.dev0
 commit = True
 tag = True
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
-serialize =
-    {major}.{minor}.{patch}-{release}
-    {major}.{minor}.{patch}
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<candidate>\d+))?
+serialize = 
+	{major}.{minor}.{patch}.{release}{candidate}
+	{major}.{minor}.{patch}
 
 [bumpversion:part:release]
 optional_value = release
-values =
-    dev
-    release
+first_value = dev
+values = 
+	dev
+	release
+
+[bumpversion:part:candidate]
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
