--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ universal = 1
 [flake8]
 max-line-length = 99
 exclude = .tox, .git, __pycache__, .ipynb_checkpoints
-ignore = # Keep empty to prevent default ignores
+ignore = W504
 
 [isort]
 include_trailing_comment = True
