--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
-envlist = py36, py37, lint, docs
+envlist = py36, py37, py38, lint, docs, readme
 
 
 [travis]
 python =
-    3.7: py37, lint, docs
+    3.8: py38, lint, docs, readme
+    3.7: py37
     3.6: py36
 
 
@@ -29,3 +30,9 @@ skipsdist = true
 extras = dev
 commands =
     /usr/bin/env make docs
+
+
+[testenv:readme]
+skipsdist = true
+commands =
+    /usr/bin/env make test-readme
