Remove python 3.8 support for now

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
-envlist = py36, py37, py38, lint, docs, readme
+envlist = py36, py37, lint, docs, readme
 
 
 [travis]
 python =
-    3.8: py38, lint, docs, readme
-    3.7: py37
+    3.7: py37, lint, docs, readme
     3.6: py36
 
 
