--- a/tox.ini
+++ b/tox.ini
@@ -1,37 +1,21 @@
 [tox]
-envlist = py36, py37, lint, docs, readme
-
-
-[travis]
-python =
-    3.7: py37, lint, docs, readme
-    3.6: py36
-
+envlist = lint, docs, py3{6,7}-{readme,unit,minimum,notebooks}
 
 [testenv]
-passenv = CI TRAVIS TRAVIS_*
-setenv =
-    PYTHONPATH = {toxinidir}
-extras = test
+skipsdist = false
+skip_install = false
+deps = 
+	readme: rundoc
+	notebooks: jupyter
+extras = 
+	lint: dev
+	docs: dev
+	unit: test
+	minimum: test
 commands =
-    /usr/bin/env make test
-
-
-[testenv:lint]
-skipsdist = true
-extras = dev
-commands =
-    /usr/bin/env make lint
-
-
-[testenv:docs]
-skipsdist = true
-extras = dev
-commands =
-    /usr/bin/env make docs
-
-
-[testenv:readme]
-skipsdist = true
-commands =
-    /usr/bin/env make test-readme
+	lint: /usr/bin/env make lint
+	docs: /usr/bin/env make docs
+    readme: /usr/bin/env make test-readme
+    unit: /usr/bin/env make test-unit
+    minimum: /usr/bin/env make test-minimum
+    notebooks: /usr/bin/env make test-notebooks
