add windows testing support

--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,23 @@
 [tox]
-envlist = lint, docs, py3{6,7}-{readme,unit,minimum,notebooks}
+envlist = lint, docs, py3{6,7}-{readme,pytest,minimum,tutorials}
 
 [testenv]
 skipsdist = false
 skip_install = false
 deps = 
-	readme: rundoc
-	notebooks: jupyter
+    invoke
+    readme: rundoc
+    tutorials: jupyter
 extras = 
-	lint: dev
-	docs: dev
-	unit: test
-	minimum: test
+    lint: dev
+    docs: dev
+    pytest: test
+    minimum: test
 commands =
-	lint: /usr/bin/env make lint
-	docs: /usr/bin/env make docs
-    readme: /usr/bin/env make test-readme
-    unit: /usr/bin/env make test-unit
-    minimum: /usr/bin/env make test-minimum
-    notebooks: /usr/bin/env make test-notebooks
+    lint: invoke lint
+    docs: invoke docs
+    readme: invoke readme
+    pytest: invoke pytest
+    minimum: invoke  minimum
+    tutorials: invoke tutorials
+    invoke rmdir --path {envdir}
