--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -113,6 +113,6 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install package and dependencies
-      run: pip install invoke jupyter .
+      run: pip install invoke jupyter matplotlib .
     - name: invoke tutorials
       run: invoke tutorials
