update tox docs command

--- a/tox.ini
+++ b/tox.ini
@@ -14,8 +14,8 @@ extras =
     pytest: test
     minimum: test
 commands =
+    docs: /usr/bin/env make docs
     lint: invoke lint
-    docs: invoke docs
     readme: invoke readme
     pytest: invoke pytest
     minimum: invoke  minimum
