--- a/tox.ini
+++ b/tox.ini
@@ -1,37 +1,23 @@
 [tox]
-envlist = py36, py37, lint, docs, readme
-
-
-[travis]
-python =
-    3.7: py37, lint, docs, readme
-    3.6: py36
-
+envlist = lint, docs, py3{6,7}-{readme,pytest,minimum,tutorials}
 
 [testenv]
-passenv = CI TRAVIS TRAVIS_*
-setenv =
-    PYTHONPATH = {toxinidir}
-extras = test
+skipsdist = false
+skip_install = false
+deps = 
+    invoke
+    readme: rundoc
+    tutorials: jupyter
+extras = 
+    lint: dev
+    docs: dev
+    pytest: test
+    minimum: test
 commands =
-    /usr/bin/env make test
-
-
-[testenv:lint]
-skipsdist = true
-extras = dev
-commands =
-    /usr/bin/env make lint
-
-
-[testenv:docs]
-skipsdist = true
-extras = dev
-commands =
-    /usr/bin/env make docs
-
-
-[testenv:readme]
-skipsdist = true
-commands =
-    /usr/bin/env make test-readme
+    docs: /usr/bin/env make docs
+    lint: invoke lint
+    readme: invoke readme
+    pytest: invoke pytest
+    minimum: invoke  minimum
+    tutorials: invoke tutorials
+    invoke rmdir --path {envdir}
