--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.7]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.6, 3.7]
+        os: [ubuntu-latest, macos-10.15, windows-latest]
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
@@ -32,7 +32,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.6, 3.7]
         os: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v1
@@ -50,8 +50,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.7]
-        os: [ubuntu-latest, macos-latest]
+        python-version: [3.6, 3.7]
+        os: [ubuntu-latest, macos-10.15]
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
@@ -68,8 +68,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.7]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.6, 3.7]
+        os: [ubuntu-latest, macos-10.15, windows-latest]
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
@@ -86,8 +86,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.7]
-        os: [ubuntu-latest, macos-latest]
+        python-version: [3.6, 3.7]
+        os: [ubuntu-latest, macos-10.15]
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
@@ -104,8 +104,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.7]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.6, 3.7]
+        os: [ubuntu-latest, macos-10.15, windows-latest]
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
