--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -112,6 +112,9 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+    - if: matrix.os == 'windows-latest' && matrix.python-version == 3.6
+      name: Install dependencies - Windows with Python 3.6
+      run: python -m pip install pywinpty==2.0.1
     - name: Install package and dependencies
       run: pip install invoke jupyter matplotlib .
     - name: invoke tutorials
