--- a/.github/workflows/latest-dependencies.yml
+++ b/.github/workflows/latest-dependencies.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         token: ${{ secrets.REPO_SCOPED_TOKEN }}
         commit-message: Update latest dependencies
-        title: [**TEST DO NOT MERGE **] Automated Latest Dependency Updates
+        title: TEST DO NOT MERGE -- Automated Latest Dependency Updates
         body: "This is an auto-generated PR with **latest** dependency updates."
         branch: latest-dep-update
         branch-suffix: short-commit-hash
