revert back from testing

--- a/.github/workflows/latest-dependencies.yml
+++ b/.github/workflows/latest-dependencies.yml
@@ -1,8 +1,5 @@
 name: Latest Dependency Checker
 on:
-  push:
-    branch:
-      - issue320-depchecker
   schedule:
     - cron: '0 * * * *'
   workflow_dispatch:
@@ -26,9 +23,9 @@ jobs:
       with:
         token: ${{ secrets.REPO_SCOPED_TOKEN }}
         commit-message: Update latest dependencies
-        title: TEST DO NOT MERGE -- Automated Latest Dependency Updates
+        title: Automated Latest Dependency Updates
         body: "This is an auto-generated PR with **latest** dependency updates."
         branch: latest-dep-update
         branch-suffix: short-commit-hash
-        base: issue320-depchecker
+        base: master
         team-reviewers: core
