--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ values =
 
 [bumpversion:part:candidate]
 
-[bumpversion:file:setup.py]
+[bumpversion:file:pyproject.toml]
 search = version='{current_version}'
 replace = version='{new_version}'
 
@@ -31,17 +31,9 @@ universal = 1
 max-line-length = 99
 exclude = .tox, .git, __pycache__, .ipynb_checkpoints
 
-[isort]
-include_trailing_comment = True
-line_length = 99
-lines_between_types = 0
-multi_line_output = 4
-not_skip = __init__.py
-use_parentheses = True
-
 [aliases]
 test = pytest
 
 [tool:pytest]
-collect_ignore = ['setup.py']
+collect_ignore = ['pyproject.toml']
 
