--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -87,7 +87,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.8']
-        os: [ubuntu-latest, macos-13]
+        os: [macos-13]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
