--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -124,3 +124,21 @@ jobs:
       run: pip install invoke jupyter matplotlib .
     - name: invoke tutorials
       run: invoke tutorials
+
+
+   pretrained:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11']
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install package and dependencies
+      run: pip install invoke jupyter .[pretrained]
+    - name: invoke pretrained
+      run: invoke pretrained
