--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -106,20 +106,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11']
         os: [ubuntu-latest, macos-latest, windows-latest]
-        exclude:
-          - os: macos-latest
-            python-version: '3.7'
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - if: matrix.os == 'windows-latest' && matrix.python-version == 3.6
-      name: Install dependencies - Windows with Python 3.6
-      run: python -m pip install pywinpty==2.0.1
     - name: Install package and dependencies
       run: pip install invoke jupyter matplotlib .
     - name: invoke tutorials
