--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,8 +78,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install package and dependencies
       run: pip install invoke .[test]
-    - name: invoke pytest
-      run: invoke pytest
+    - name: invoke unit
+      run: invoke unit
 
 
   unit-pretrained:
@@ -96,7 +96,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install package and dependencies
       run:  |
-          pip install invoke .[pretrained]
+          pip install invoke .[pretrained-test]
     - name: invoke pretrained
       run: invoke pretrained
 
