--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -115,7 +115,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install package and dependencies
       run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade 'pip<=24.1'
           python -m pip install invoke .[test]
     - name: invoke minimum
       run: invoke minimum
